--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,38 +1,56 @@
 {
   "schemaVersion": "1.0.0",
   "projectStateVersion": 3,
-  "summary": "Community Board will include an AI-assisted moderation system to block/route illegal content during uploads, with specific enforcement rules and user messaging.",
-  "architectural_notes": [
-    "Moderation scope limited to Community Board uploads (not app-wide).",
-    "Enforcement rules: underage content = block upload; copyright violations = block upload; borderline hate speech = manual review (threats also to be detected; disposition not further specified).",
-    "User-facing messaging: display a notice that the upload was blocked for violating guidelines when blocked."
-  ],
-  "known_issues": [
-    "Build attempt for the moderation system failed with error: 'AI was unable to complete your request. Try rephrasing it more clearly.'"
-  ],
+  "summary": "App with moderation flow; user requested adding user profiles with Internet Identity login including display name, bio, and avatar image.",
+  "architectural_notes": [],
+  "known_issues": [],
   "isFixRequest": false,
   "existing_features": [
     {
-      "id": "feature-add-a-moderation-review-queue-for-community-board-content-that-is-routed-to-manual-review-including-backend-methods-for-admins-to-list-pending-items-and-to-approve-or-reject-them",
-      "title": "Add a moderation review queue for Community Board content that is routed to manual review, including backend methods for admins to list pending items and to approve or reject them.",
+      "id": "feature-add-profiles-routes-to-the-tanstack-router-including-a-profiles-directory-route-and-an-individual-profile-route-that-supports-viewing-a-profile-by-principal-string",
+      "title": "Add Profiles routes to the TanStack Router, including a profiles directory route and an individual profile route that supports viewing a profile by principal string.",
+      "reqIds": [
+        "REQ-1"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-replace-the-current-profiles-currently-unavailable-placeholder-with-a-functional-profiles-directory-page-that-lists-public-directory-profiles-from-the-backend-and-links-to-each-profile-view",
+      "title": "Replace the current “Profiles Currently Unavailable” placeholder with a functional Profiles Directory page that lists public directory profiles from the backend and links to each profile view.",
+      "reqIds": [
+        "REQ-2"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-implement-the-profile-page-ui-to-view-a-user-profile-avatar-display-name-bio-links-plushie-image-grid-and-show-follow-follower-counts-and-profile-like-count-with-like-unlike-and-follow-unfollow-actions-for-authenticated-users",
+      "title": "Implement the Profile page UI to view a user profile (avatar, display name, bio, links, plushie image grid) and show follow/follower counts and profile like count with Like/Unlike and Follow/Unfollow actions for authenticated users.",
       "reqIds": [
         "REQ-3"
       ],
       "version": 1
     },
     {
-      "id": "feature-when-an-upload-is-blocked-by-moderation-show-the-user-a-clear-error-message-stating-that-the-upload-was-blocked-for-violating-guidelines",
-      "title": "When an upload is blocked by moderation, show the user a clear error message stating that the upload was blocked for violating guidelines.",
+      "id": "feature-implement-an-owner-only-profile-editing-experience-for-the-signed-in-user-allowing-editing-and-saving-of-all-profile-fields-display-name-bio-avatar-image-links-plushie-images-and-public-directory-opt-in",
+      "title": "Implement an owner-only profile editing experience for the signed-in user, allowing editing and saving of all profile fields: display name, bio, avatar image, links, plushie images, and public directory opt-in.",
       "reqIds": [
         "REQ-4"
       ],
       "version": 1
     },
     {
-      "id": "feature-update-frontend-actor-error-normalization-to-recognize-moderation-related-backend-errors-blocked-vs-manual-review-and-present-user-friendly-english-messaging-without-exposing-internal-details",
-      "title": "Update frontend actor error normalization to recognize moderation-related backend errors (blocked vs. manual review) and present user-friendly English messaging without exposing internal details.",
+      "id": "feature-implement-the-missing-profile-editor-components-avataruploader-plushieimageseditor-editprofilepanel-with-file-validation-local-previews-and-conversion-to-externalblob-using-the-existing-utilities-in-the-codebase",
+      "title": "Implement the missing profile editor components (AvatarUploader, PlushieImagesEditor, EditProfilePanel) with file validation, local previews, and conversion to ExternalBlob, using the existing utilities in the codebase.",
       "reqIds": [
         "REQ-5"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-expose-profiles-navigation-entry-points-in-the-ui-so-users-can-find-the-profiles-directory-and-their-own-profile-easily",
+      "title": "Expose Profiles navigation entry points in the UI so users can find the profiles directory and their own profile easily.",
+      "reqIds": [
+        "REQ-6"
       ],
       "version": 1
     }
@@ -40,28 +58,12 @@
   "new_feature_requests": [
     {
       "id": "AR-1",
-      "summary": "AI-assisted moderation for Community Board uploads: detect hate speech, underage content, threats, and copyright; block underage/copyright; send borderline hate speech to manual review; show 'blocked for violating guidelines' message",
+      "summary": "Add user profiles with Internet Identity login including display name, bio, and avatar image fields.",
       "reqIds": [],
-      "status": "pending"
-    },
-    {
-      "id": "AR-2",
-      "summary": "Implement an on-canister (no external API) AI-assisted moderation check for Community Board post creation that analyzes the post title/body and any attached video metadata and returns one of: allow, block, or manual-review.",
-      "reqIds": [
-        "REQ-1"
-      ],
-      "status": "pending"
-    },
-    {
-      "id": "AR-3",
-      "summary": "Enforce moderation outcomes on Community Board uploads with the specified policy: underage content must be blocked entirely; copyright violations must be blocked entirely; borderline hate speech cases must be routed to manual review (not published in the public feed).",
-      "reqIds": [
-        "REQ-2"
-      ],
       "status": "pending"
     }
   ],
-  "projectName": "Add AI-assisted moderation to Community Board uploads (block illegal content + manual review queue)",
+  "projectName": "Implement user profiles (display name, bio, avatar, links, plushie images) with Internet Identity",
   "clarification_mode": "instant",
   "clarification_rounds": 0
 }
